test-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: ebay-test-pod
spec:
  containers:
    - name: test-container
      image: k8s.gcr.io/busybox
      command: [ "/bin/sh","-c","tail -f /dev/null" ]
      volumeMounts:
      - name: config-volume
        mountPath: /etc/config
  terminationGracePeriodSeconds: 10
  volumes:
    - name: config-volume
      configMap:
        name: ebay-config
