nginx-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web
spec:
  rules:
  - host: "web.ebay-example.com"
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
